# pomo

./: .mcp.json  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: mcp-setup.md  pomo-dev-plan.md  pomo-spec.md  pomo-tech.md
docs/claude/: architecture.md  frontend-patterns.md  testing.md
scripts/: generate-chime.mjs
src/: App.test.tsx  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  config.rs  database.rs  lib.rs  main.rs  reports.rs  tasks.rs  timer.rs
src/components/: DailySummary.tsx  DailyTimeline.tsx  DateNavigator.tsx  IntervalAssociationDialog.tsx  IntervalTypeSelector.tsx  MonthlySummary.tsx  ReportsPage.tsx  SettingsPanel.tsx  SubtaskItem.tsx  TaskCreateDialog.tsx  TaskList.tsx  TaskPanel.tsx  TaskPanelOverlay.tsx  TimerControls.tsx  TimerDisplay.tsx  TimerPage.tsx  WeeklySummary.tsx
src/components/__tests__/: DailySummary.test.tsx  DailyTimeline.test.tsx  DateNavigator.test.tsx  IntervalAssociationDialog.test.tsx  IntervalTypeSelector.test.tsx  MonthlySummary.test.tsx  ReportsPage.test.tsx  SettingsPanel.test.tsx  SubtaskItem.test.tsx  TaskCreateDialog.test.tsx  TaskList.test.tsx  TaskPanel.test.tsx  TimerControls.test.tsx  TimerDisplay.test.tsx  WeeklySummary.test.tsx
src/lib/: audio.ts  db.ts  intervalsRepository.ts  schemas.ts  settingsRepository.ts  taskIntervalLinksRepository.ts  tasksRepository.ts
src/stores/: reportStore.ts  taskStore.ts  timerStore.ts
(+11 files in other folders)
