[package]
name = "pomo"
version = "0.1.0"
description = "A Pomodoro timer desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "pomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "compression", "dynamic-acl", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
