[package]
name = "pomo"
version = "0.1.0"
description = "A Pomodoro timer desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "pomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "compression", "dynamic-acl", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
rodio = { version = "0.19", default-features = false, features = ["wav"] }

[features]
default = ["dialog"]
dialog = ["dep:tauri-plugin-dialog"]
